# CRM_Agent

./: .gitignore  LICENSE  README.md  checkupdate.sh  crm.py  crm_logging.py  crmservice.service  moneyhouse.py  openapi_def.py  preprocessing.py  requirements.txt  run.sh  service.py  test.py  test_moneyhouse.py  todo.py  todos.csv  tools.py  tools_moneyhouse.py  tools_todo.py  unittests.py  update.sh
common/: gpt.py  gpt_azure.py  gpt_openai.py
cudos_scouts/: README.md  pyproject.toml  report.md
cudos_scouts/src/cudos_scouts/: crew.py  main.py
spielplatz/: scraper.py
util/: data_preprocessor.py
